consol logs cleared, css.map added, jumping btn fixed

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -211,6 +211,9 @@ html {
               color: $pri-dark-blue;
               padding: 20px 0;
             }
+            @include breakpoint(laptop) {
+              padding: 0 20px 0 0;
+            }
 
             &:last-child {
               padding: 0 40px;
